Enabling the reset feature

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <p>Brush</p>
             <input type="color" value="#40C4FF" class="brush">
         </div>
-        <button>Reset</button>
+        <button class="buton">Reset</button>
     </div>
     <div class="container">
     </div>
